--- a/11 - Custom Video Player/index.html
+++ b/11 - Custom Video Player/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>HTML Video Player</title>
+  <title>📺 Definetly Not Netflix</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
    <div class="player">
