WIP: adding functions

--- a/11 - Custom Video Player/index.html
+++ b/11 - Custom Video Player/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>📺 Definetly Not Netflix</title>
+  <title>📺 Not Netflix</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
