--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -5,6 +5,7 @@
   <title>LocalStorage</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <!--
       Fish SVG Cred:
@@ -25,14 +26,6 @@
     </form>
   </div>
 
-<script>
-  const addItems = document.querySelector('.add-items');
-  const itemsList = document.querySelector('.plates');
-  const items = [];
-
-</script>
-
-
+<script src="main.js"></script>
 </body>
 </html>
-
