completed reduce excercise

--- a/18 - Adding Up Times with Reduce/index-START.html
+++ b/18 - Adding Up Times with Reduce/index-START.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Videos</title>
 </head>
+
 <body>
   <ul class="videos">
     <li data-time="5:43">
@@ -181,7 +182,6 @@
       Video 58
     </li>
   </ul>
-<script>
-</script>
+<script src="main.js"></script>
 </body>
 </html>
